force-app/main/default/objects/fw1__Recurring_Invoice_Line__c/fields/fw1__Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Amount__c</fullName>
    <formula>fw1__Net_Amount__c + fw1__Sales_Tax__c +  fw1__Shipping_And_Handling__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>