force-app/main/default/objects/fw1__Recurring_Invoice_Line__c/fields/fw1__Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>fw1__Discount_Percentage__c</fullName>
    <label>Discount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>