force-app/main/default/objects/fw1__Recurring_Invoice_Line__c/fields/fw1__External_ID__c.field-meta.xml
<CustomField>
    <fullName>fw1__External_ID__c</fullName>
    <label>External ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>