force-app/main/default/objects/fw1__Recurring_Invoice_Line__c/fields/fw1__Invoiced__c.field-meta.xml
<CustomField>
    <fullName>fw1__Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For non-recurring line items, this will indicate whether they were invoiced or not.</description>
    <label>Invoiced</label>
    <type>Checkbox</type>
</CustomField>