force-app/main/default/objects/fw1__Recurring_Invoice_Line__c/fields/fw1__Is_Shipping_Taxable__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Shipping_Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Shipping Taxable</label>
    <type>Checkbox</type>
</CustomField>