force-app/main/default/objects/fw1__Recurring_Invoice_Line__c/fields/fw1__Line__c.field-meta.xml
<CustomField>
    <fullName>fw1__Line__c</fullName>
    <label>Line</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>