force-app/main/default/objects/fw1__Recurring_Invoice_Line__c/fields/fw1__Long_Description__c.field-meta.xml
<CustomField>
    <fullName>fw1__Long_Description__c</fullName>
    <label>Long Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>