force-app/main/default/objects/fw1__Recurring_Invoice_Line__c/fields/fw1__Net_Amount_nf__c.field-meta.xml
<CustomField>
    <fullName>fw1__Net_Amount_nf__c</fullName>
    <label>Net Amount (non formula)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>