force-app/main/default/objects/fw1__Recurring_Invoice_Line__c/fields/fw1__Non_Recurring__c.field-meta.xml
<CustomField>
    <fullName>fw1__Non_Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, this line item will only be invoiced once.</inlineHelpText>
    <label>Non-Recurring</label>
    <type>Checkbox</type>
</CustomField>