force-app/main/default/objects/fw1__Recurring_Invoice_Line__c/fields/fw1__Recurring_Invoice__c.field-meta.xml
<CustomField>
    <fullName>fw1__Recurring_Invoice__c</fullName>
    <label>Recurring Invoice</label>
    <referenceTo>fw1__Recurring_Invoice__c</referenceTo>
    <relationshipLabel>Recurring Invoice Lines</relationshipLabel>
    <relationshipName>Recurring_Invoice_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>