force-app/main/default/objects/fw1__Recurring_Invoice_Line__c/fields/fw1__Related_Invoice__c.field-meta.xml
<CustomField>
    <fullName>fw1__Related_Invoice__c</fullName>
    <description>Related invoice for non-recurring items.</description>
    <label>Related Invoice</label>
    <type>Url</type>
</CustomField>