force-app/main/default/objects/fw1__Recurring_Invoice_Line__c/fields/fw1__Sales_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>fw1__Sales_Tax_Rate__c</fullName>
    <label>Sales Tax Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>