force-app/main/default/objects/fw1__Recurring_Invoice_Line__c/fields/fw1__Total_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Discount_Amount__c</fullName>
    <formula>((( fw1__Quantity__c - fw1__Discount_Quantity__c ) * fw1__Unit_Price__c ) * fw1__Discount_Percentage__c) 
+ 
fw1__Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>