force-app/main/default/objects/fw1__Recurring_Invoice_Line__c/fields/fw2__Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>fw2__Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Recurring Invoice Lines</relationshipLabel>
    <relationshipName>Recurring_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>